AC_INIT(RFNoC_RH, 1.0.0)
AM_INIT_AUTOMAKE([nostdinc foreign])
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
LT_INIT([disable-static])

AC_CORBA_ORB
OSSIE_CHECK_OSSIE
RH_SOFTPKG_PREFIX([RFNoC_RH],[cpp])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

# Dependencies
PKG_CONFIG_PATH=/usr/local/lib:/usr/local/lib64/pkgconfig:$PKG_CONFIG_PATH
PKG_CHECK_MODULES([REDHAWK], [ossie >= 2.0])
PKG_CHECK_MODULES([UHD], [uhd >= 3.11.1])
OSSIE_ENABLE_LOG4CXX
AX_BOOST_BASE([1.41])
AX_BOOST_SYSTEM
AX_BOOST_THREAD
AX_BOOST_REGEX

AC_CONFIG_FILES([Makefile RFNoC_RH.pc])
AC_OUTPUT
